# aau_spo_exercises

./: .gitignore  README.md  aau_spo_exercises.opam  dune-project
lib/: dune
test/: dune
